--- a/Project1_starter.ipynb
+++ b/Project1_starter.ipynb
@@ -26,6 +26,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Name: "
+      ],
+      "metadata": {
+        "id": "_g3UFb9b8UvP"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "F9AOhxuO9Vt7"
       },
@@ -59,7 +68,7 @@
         "happiness =pd.read_csv('/content/drive/MyDrive/CS167Spring22/datasets/happiness_data.csv')\n",
         "happiness.head()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +302,7 @@
         "heart =pd.read_csv('/content/drive/MyDrive/CS167Spring22/datasets/heart.csv')\n",
         "heart.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +534,7 @@
         "chocolate =pd.read_csv('/content/drive/MyDrive/CS167Spring22/datasets/chocolate.csv')\n",
         "chocolate.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +748,7 @@
         "ramen =pd.read_csv('/content/drive/MyDrive/CS167Spring22/datasets/ramen-ratings.csv')\n",
         "ramen.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
