--- a/Project1_starter.ipynb
+++ b/Project1_starter.ipynb
@@ -991,10 +991,7 @@
       },
       "source": [
         "# Baseline Performance\n",
-        "Identify a baseline for your metrics - what would you expect to happen with this particular data if you always guessed the average or if you guessed randomly? What did some of the unsuccessful machine learning algorithms yield?\n",
-        "\n",
-        "Some helpful links:\n",
-        "- [Sklearn Dummy Regressor](https://scikit-learn.org/stable/modules/generated/sklearn.dummy.DummyRegressor.html)"
+        "Identify a baseline for your metrics - what would you expect to happen with this particular data if you always guessed the average or if you guessed randomly? What did some of the unsuccessful machine learning algorithms yield?"
       ]
     },
     {
